--- a/allcss/css/styles.css
+++ b/allcss/css/styles.css
@@ -295,5 +295,5 @@ b.max-bold{ font-weight: 700; }
 10. FOOTER
 --------------------------------- */
 
-.copyright{ text-align: center; padding: 30px 0; background: #2E74D1; color: white; }
+.copyright{ text-align: center; padding: 30px 0; background: #FFAB00; color: white; }
 
